# Boggleizer

./: .flake8  .gitattributes  CHANGELOG.md  CSW19.txt  README.md  pyproject.toml  setup.py
.github/workflows/: push.yml
src/boggleizer/: main.py  solve.py
tests/unit/: test_main.py  test_solve.py
